--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
   <title>Document</title>
 </head>
 <body>
   <canvas class="canvas"></canvas>
-  <script src="js/gravity.js"></script>
+  <script src="js/index-2.js"></script>
 </body>
 </html>
