--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <canvas class="canvas"></canvas>
-  <script src="js/index-2.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css">
+    <title>shmario</title>
+  </head>
+  <body>
+    <div class="frame">
+      <div class="canvas-box">
+        <canvas class="canvas"></canvas>
+      </div>
+    </div>
+    <script src="js/index-2.js"></script>
+  </body>
 </html>
