--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css">
-    <title>shmario</title>
+    <title>CyberPETR</title>
   </head>
   <body>
     <div class="frame">
@@ -13,6 +13,6 @@
         <canvas class="canvas"></canvas>
       </div>
     </div>
-    <script src="js/index-2.js"></script>
+    <script src="js/index-3.js" type="module"></script>
   </body>
 </html>
